[package]
name = "miscellaneous"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arc-swap = "1.7.1"
chrono = "0.4.38"
crossbeam-utils = "0.8.20"
dotenv = "0.15.0"
enum_dispatch = "0.3.13"
loom = "0.7.2"
mio = { version = "1.0.0", features = ["net", "os-poll"] }
oneshot = "0.1.8"
rand.workspace = true
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1.15"
